<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_column="2"
    tools:context="it.enerjize.gridlayoutpr.Exercise">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/textview"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/text"
        />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:id="@+id/Toggle"
        android:textOn="@string/Toggle1"
        android:textOff="@string/Toggle2"
        android:layout_margin="5dp"
        />
    <CheckBox
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:text="@string/milk"
        android:layout_margin="5dp"

        />
    <CheckBox
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:text="@string/sugar"
        android:layout_margin="5dp"

        />
    <CheckBox
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:text="@string/lemon"
        android:layout_margin="5dp"

        />

</GridLayout>
